add get dependency  to main and add factory package and refactor apptheme

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,9 +26,9 @@ dependencies:
   http:
   provider:
   equatable:
-  get: 3.4.2
   flutter_secure_storage:
   intl:
+  get:
 
 
   # The following adds the Cupertino Icons font to your application.
