--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,13 +23,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations: # Add this line
+    sdk: flutter
   http:
   provider:
   equatable:
   flutter_secure_storage:
   intl:
   get:
-
+  google_fonts:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
